<resources>
    <string name="app_name">Expiry Tracker</string>
    <string name="ad_attribution">AD</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alerts">Alerts</string>
    <string name="btn_text">Save your product</string>
    <string name="let_s_keep_it_fresh">Keep it fresh</string>
    <string name="image">image</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="date">27th June</string>
    <string name="date_variable">%1$dth %2$s</string>
    <string name="morning_greeting_text">Good Morning</string>
    <string name="afternoon_greeting_text">Good Afternoon</string>
    <string name="evening_greeting_text">Good Evening</string>
    <string name="greeting_variable">Good %1$s, %2$s</string>
    <string name="status_dashboard">All of your products looks fresh, good job</string>
    <string name="status_dashboard_var">%1$s</string>
    <string name="strawberries">Strawberries</string>
    <string name="bought_on_sample">Bought On : 25th June</string>
    <string name="slogan">Lets keep \neverything fresh</string>
    <string name="add_here">Add here</string>
    <string name="add_product">Add Product</string>
    <string name="product_category">Product Category</string>
    <string name="product_var">Product %1$s</string>
    <string name="choose_a_category">1.Choose Category</string>
    <string name="choose_title">%1$d. Choose %2$s</string>
    <string name="vegetables">Vegetables</string>
    <string name="_2_product_name">2.Choose Product</string>
    <string name="product_name">Product</string>
    <string name="product_name_var">Product Name: %1$s</string>
    <string name="set_expiry_date">3.Set Expiry Date</string>
    <string name="manufactured_date">Manufactured Date</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="date_string">%1$d/%2$d/%3$d</string>
    <string name="date_string_with_month_name">%1$s. %2$d, %3$d</string>
    <string name="mfg_date_string_with_month_name">%1$d %2$s. %3$d \nMFG Date</string>
    <string name="date_string_with_month_name_and_time">%1$s. %2$d, %3$d  %4$s </string>
    <string name="date_string_with_month_name_and_time_2_lined">%1$s. %2$d, %3$d \n%4$s </string>
    <string name="date_string_with_month_name_2_lined">%1$d %2$s.\n%3$d</string>
    <string name="date_string_with_month_name_last_and_time_2_lined"> %1$d %2$s. %3$d \n%4$s </string>
    <string name="track">Track</string>
    <string name="lets_s_track_a_product">Track a Product</string>
    <string name="expiry_date_8th_aug_2021">Expiring On - 8th Aug, 2021</string>
    <string name="expiry_date_var">Expiring On - %1$s. %2$d, %3$d</string>
    <string name="expiry_date_var_1">Expiry date: %1$s. %2$d, %3$d</string>
    <string name="mfg_date_var_1">Mfg date:    %1$s. %2$d, %3$d</string>
    <string name="used_date_var">Used date:   %1$s. %2$d, %3$d</string>
    <string name="expiring_date_var">%1$d %2$s, %3$d</string>
    <string name="date_var">%1$s. %2$d, %3$d</string>
    <string name="manufactured_date_8th_aug_2021">8th Aug, 2021</string>
    <string name="manufactured_date_var">%1$s. %2$d, %3$d</string>
    <string name="track_product">Track Product</string>
    <string name="time_sample">2:22 AM</string>
    <string name="date_sample">11 DEC, 2021</string>
    <string name="month_sample">January 2021</string>
    <string name="month_var">%1$s %2$d</string>
    <string name="week_var">%1$d %2$s - %3$d %4$s</string>
    <string name="date_short_var">%1$d %2$s</string>
    <string name="all">All</string>
    <string name="products">Products</string>
    <string name="hey_there">Hey there 😀</string>
    <string name="fresh">Fresh</string>
    <string name="expiring">Expiring Soon</string>
    <string name="good">In Good Condition</string>
    <string name="expired">Expired</string>
    <string name="no_item_text">No %1$s %2$s found!</string>
    <string name="no_item_text1">No %1$s found!</string>
    <string name="sunday_text">SUN</string>
    <string name="monday_text">MON</string>
    <string name="tuesday_text">TUE</string>
    <string name="wednesday_text">WED</string>
    <string name="thursday_text">THU</string>
    <string name="friday_text">FRI</string>
    <string name="saturday_text">SAT</string>
    <string name="_1">1</string>
    <string name="become_pro">Upgrade to pro</string>
    <string name="favourites">Favourites</string>
    <string name="widgets">Awesome Widgets</string>
    <string name="night_mode">Night Mode</string>
    <string name="donate">Donate</string>
    <string name="feedback">Feedback</string>
    <string name="categories">Categories</string>
    <string name="notifications">Notifications</string>
    <string name="analytics">Analytics</string>
    <string name="undo">Undo</string>
    <string name="used">Used</string>
    <string name="_21_december">21 December</string>
    <string name="daily">DAILY</string>
    <string name="yearly">YEARLY</string>
    <string name="monthly">MONTHLY</string>
    <string name="weekly">WEEKLY</string>
    <string name="used_near_expiry">Used Near Expiry</string>
    <string name="used_near_expiry_2_line">Used Near \nExpiry</string>
    <string name="used_near_expiry_2">Used just before expiration</string>
    <string name="products_expired">Expired</string>
    <string name="_0">0</string>
    <string name="_22">22</string>
    <string name="_18">18</string>
    <string name="_20">20</string>
    <string name="_28">28</string>
    <string name="used_fresh">Used Fresh</string>
    <string name="total_tracked">Total Tracked</string>
    <string name="percentage">%1$s%%</string>
    <string name="additional_info1">Total products tracked so far - %1$d</string>
    <string name="total_product_tracked_var">Total products tracked in this period     - %1$d</string>
    <string name="total_product_expired_var">Total products expired in this period     - %1$d</string>
    <string name="total_product_used_near_expiry_var">Total products used near expiry  - %1$d</string>
    <string name="total_product_used__fresh">Total products used when they where fresh - %1$d</string>
    <string name="additional_info2">Total products tracking right now - %1$d</string>
    <string name="quantity">Quantity</string>
    <string name="no">No.</string>
    <string name="freshly_used">Used fresh</string>
    <string name="good_condition">Used in good condition</string>
    <string name="result">Result</string>
    <string name="support_expiry_tracker_team">Support Expiry Tracker Team</string>
    <string name="review_expiry_tracker_app">Share your feedback</string>
    <string name="review_message">We would love to hear your thoughts regarding our App. We are working hard to provide a better and easy user experience.</string>
    <string name="grateful_note">Hey there! This is a donation Page. You could treat us with a meal or a candy here. We will be very grateful for your kind support. Anyway we are already grateful to you for choosing this app. Thank you so much.</string>
    <string name="personal_note">Craving for more customizations? We got you covered. Dig in and experiment.</string>
    <string name="manage_categories_note">Want to see logs, edit, delete, add or search products. No problem we got you covered</string>
    <string name="manage_products_note">Want to see history logs, edit, delete or add products. This page will help you do that. Tap on any product to start.</string>
    <string name="manage_notification_note">Enable notification for all tracking with one tap or set reminder time for any specific tracking in progress.</string>
    <string name="search_category_hint">Start typing to search</string>
    <string name="personalization">Personalization</string>
    <string name="submit">Submit</string>
    <string name="your_thoughts">Your thoughts</string>
    <string name="rating_bar_content_description">This is a bar which can be used to rate the app on Google Play store directly.</string>
    <string name="rating_expression_image_description">Image which shows developer emotions when get rated</string>
    <string name="_5_rating_hint">Spread love with your kind words for us.</string>
    <string name="_3_rating_hint">How can we improve.</string>
    <string name="_2_rating_hint">How can we improve.</string>
    <string name="_1_rating_hint">Let us know what went wrong.</string>
    <string name="a_candy">A Candy</string>
    <string name="_1_29">$1.29</string>
    <string name="_2_50">$2.50</string>
    <string name="a_chocolate_bar">A Chocolate Bar</string>
    <string name="a_cup_of_coffee">A Cup Of Coffee</string>
    <string name="_6_88">$6.88</string>
    <string name="a_fresh_burger">A Fresh Burger</string>
    <string name="_12_07">$12.07</string>
    <string name="a_big_dinner">A Big Dinner</string>
    <string name="_29_99">$29.99</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="tracking_info_widget_description">Quick glance over the statistics of on going tracking. i.e. Number of Products which are fresh, still OK, expiring and already expired.  </string>
    <string name="tracker_view_widget_description">More descriptive glance of ongoing tracking. ie. product image, product name, tracking status and expiry date.</string>
    <string name="active_trackers">Active Trackers</string>
    <string name="still_ok">Still OK</string>
    <string name="widget_adding_instructions">Click Add Button to add widget to your home screen. Widget is handy tools to get quick status of your product tracking.</string>
    <string name="add">Add to Home Screen</string>
    <string name="_add">Add</string>
    <string name="make_it_yours">Make it yours</string>
    <string name="change_color">Change Theme Color</string>
    <string name="_3">3</string>
    <string name="custom">Custom</string>
    <string name="create_custom">Create Custom </string>
    <string name="category_name">Category Name</string>
    <string name="category_name_var">Category Name: %1$s</string>
    <string name="take_a_picture">Take A Picture</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="use_cool_icons">Use Cool Icons</string>
    <string name="skip">Skip</string>
    <string name="unlock_all_pro_features">Unlock all PRO features</string>
    <string name="no_ads">No Ads</string>
    <string name="unlock_all_widgets">Unlock all widgets</string>
    <string name="customize_your_theme">Customize your theme</string>
    <string name="edit_pdf_format">Edit PDF format</string>
    <string name="annual">Annual</string>
    <string name="_monthly">Monthly</string>
    <string name="billed_yearly">Billed yearly</string>
    <string name="billed_monthly">Billed monthly</string>
    <string name="upgrade">Upgrade</string>
    <string name="subscription_instructions">After purchase is confirmed, payment will be charged to your google play account. Subscription will automatically renew unless auto-renew is turned off at least 24 hours before the end of the current period. You can manage or unsubscribe at any time in Google Play account settings.</string>
    <string name="_11_99">$ 11.99</string>
    <string name="_1_99">$ 1.99</string>
    <string name="refresh">Refresh</string>
    <string name="become_pro_to_unlock_this_widget">Become Pro to unlock this widget</string>
    <string name="check_now">Check Now</string>
    <string name="block_screen">block screen</string>
    <string name="create_new">Create New</string>
    <string name="let_s_track_product_expiry_date">Let\'s track product expiry date.</string>
    <string name="keep_your_products_fresh">Keep your products fresh.</string>
    <string name="check_status">Check status</string>
</resources>